Changed colors to dark. Not dark mode, should fix that at some point.

--- a/src/App.css
+++ b/src/App.css
@@ -11,4 +11,6 @@
     flex-direction: column;
     align-items: center;
     padding-top: 2rem;
+    /* DARK MODE */
+    background-color: rgb(27, 27, 27);
 }
