--- a/src/components/css/header.css
+++ b/src/components/css/header.css
@@ -1,6 +1,9 @@
 
 header {
-    background-color: rgb(218, 218, 218);
+  /* LIGHT MODE */
+    /* background-color: rgb(218, 218, 218); */
+    /* DARK MODE */
+    background-color: rgb(19, 19, 19);
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -11,11 +14,17 @@ header {
 
 header a {
     font-size: 1.6rem;
-    color: rgb(152, 152, 152);
+    /* LIGHT MODE */
+    /* color: rgb(152, 152, 152); */
+    /* DARK MODE */
+    color: rgb(68, 68, 68);
 }
 
 .activeHeaderIconLink {
-  color: rgb(78, 78, 78);
+  /* LIGHT MODE */
+  /* color: rgb(78, 78, 78); */
+  /* DARK MODE */
+  color: rgb(181, 181, 181);
   transform: scale(1.10);
 }
 
