--- a/src/index.css
+++ b/src/index.css
@@ -15,5 +15,8 @@ button {
 }
 
 h1 {
-  color: rgb(66, 66, 66);
+  /* LIGHT MODE */
+  /* color: rgb(66, 66, 66); */
+  /* DARK MODE */
+  color: rgb(157, 157, 157);
 }
