--- a/src/pages/StartPage/components/css/weekly-tasks-component.css
+++ b/src/pages/StartPage/components/css/weekly-tasks-component.css
@@ -5,15 +5,29 @@
     border-radius: 0.5rem;
     border: 0.8px solid rgba(128, 128, 128, 0.285);
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.08);
+    /* DARK MODE */
+    background-color: rgb(192, 192, 192);
 }
 
 .displayDoneWeeklyTasks {
-    background-color: rgb(218, 218, 218);
     text-decoration: line-through;
+    /* LIGHT MODE */
+    /* background-color: rgb(218, 218, 218); */
+    /* DARK MODE */
+    background-color: rgb(83, 83, 83);
+    
 }
 
 .displayNotDoneWeeklyTasks {
-    background-color: rgb(244, 244, 244);
+    /* LIGHT MODE */
+    /* background-color: rgb(244, 244, 244); */
+    /* DARK MODE */
+    background-color: rgb(192, 192, 192);
+}
+
+.taskName {
+    /* DARK MODE */
+    color: rgb(42, 42, 42) !important; 
 }
 
 .singleTask {
