--- a/src/pages/StartPage/start-page.css
+++ b/src/pages/StartPage/start-page.css
@@ -7,6 +7,11 @@
     padding-bottom: 2rem;
 }
 
+.startPage p {
+    /* DARK MODE */
+    color: gray;
+}
+
 .startPageExistingTasks {
     display: flex;
     flex-direction: column;
@@ -31,16 +36,12 @@
 }
 
 .startPageBtnUnmarkAll {
-    /* background-color: rgb(210, 210, 210); */
     background-color: rgb(237, 210, 146);
-    /* color: rgb(71, 71, 71); */
     color: rgb(151, 107, 4);
 }
 
 .startPageBtnMarkAll {
-    /* background-color: rgb(71, 71, 71); */
     background-color: rgb(215, 157, 20);
-    /* color: rgb(210, 210, 210); */
     color: rgb(237, 220, 181);
 }
 
